--- a/templates/base.html
+++ b/templates/base.html
@@ -29,9 +29,7 @@
     {% endblock %}
 
 
-    <!-- 
-Essential Scripts
-=====================================-->
+    <!-- Essential Scripts=====================================-->
 
     <script src="{% static './script.js' %}"></script>
     <script src="{% static './bs/bootstrap.bundle.js' %}"></script>
