--- a/templates/include/navbar.html
+++ b/templates/include/navbar.html
@@ -45,17 +45,17 @@
 <!--        </div>-->
 
         {% if request.user.is_authenticated %}
+
         <div class="cart-and-profile">
             <div class="cart">
-                <a href="{% url 'core:logout' %}">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                        class="bi bi-arrow-bar-left" viewBox="0 0 16 16">
-                        <path fill-rule="evenodd"
-                            d="M12.5 15a.5.5 0 0 1-.5-.5v-13a.5.5 0 0 1 1 0v13a.5.5 0 0 1-.5.5zM10 8a.5.5 0 0 1-.5.5H3.707l2.147 2.146a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L3.707 7.5H9.5a.5.5 0 0 1 .5.5z" />
+                <a href="{% url 'conversation:inbox' %}">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-envelope-fill" viewBox="0 0 16 16">
+                      <path d="M.05 3.555A2 2 0 0 1 2 2h12a2 2 0 0 1 1.95 1.555L8 8.414.05 3.555ZM0 4.697v7.104l5.803-3.558L0 4.697ZM6.761 8.83l-6.57 4.027A2 2 0 0 0 2 14h12a2 2 0 0 0 1.808-1.144l-6.57-4.027L8 9.586l-1.239-.757Zm3.436-.586L16 11.801V4.697l-5.803 3.546Z"/>
                     </svg>
-                    <span> Logout</span>
+                    <span> Inbox </span>
                 </a>
             </div>
+
             <div class="profile">
                 <a href="{% url 'dashboard:index' %}">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
@@ -65,6 +65,7 @@
                     <span> Dashboard</span>
                 </a>
             </div>
+
             <div class="cart">
                 <a href="./checkout.html">
                     <svg onclick="toggleMenu()" xmlns="http://www.w3.org/2000/svg" width="16" height="16"
@@ -76,7 +77,22 @@
                     <span> Cart <span class="added">0</span></span>
                 </a>
             </div>
-
+            <div class="dropdown ms-2">
+              <button class=" rounded user_profile" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-down-fill" viewBox="0 0 16 16">
+                      <path d="M7.247 11.14 2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z"/>
+                    </svg>
+              </button>
+                <div class="cart dropdown-menu mt-4">
+                <a href="{% url 'core:logout' %}" class="dropdown-item text-dark">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                        class="bi bi-arrow-bar-left" viewBox="0 0 16 16">
+                        <path fill-rule="evenodd"
+                            d="M12.5 15a.5.5 0 0 1-.5-.5v-13a.5.5 0 0 1 1 0v13a.5.5 0 0 1-.5.5zM10 8a.5.5 0 0 1-.5.5H3.707l2.147 2.146a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L3.707 7.5H9.5a.5.5 0 0 1 .5.5z" />
+                    </svg>
+                    <span> Logout</span>
+                </a>
+            </div>
         </div>
         {% endif %}
 
