--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
     <link rel="shortcut icon" href="/static/images/favicon/cart-fill.svg" type="image/x-icon">
     <link rel="stylesheet" href="{% static './css/style.css' %}">
     <link rel="stylesheet" href="{% static './bs/bootstrap.css' %}">
-    <title>Ecommerce</title>
+    <title>Shopyfy</title>
 
 
 </head>
