--- a/templates/frontpages/edit_items.html
+++ b/templates/frontpages/edit_items.html
@@ -9,6 +9,9 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-10 col-md-8 align-item-center">
+                <div class="pb-3">
+                    <a href="/">Back</a>
+                    </div>
                 <div class="border border px-5" style="border-radius: 5px;">
                     <h3 class="bg-gray pt-5">Add Item</h3>
 
