--- a/templates/frontpages/index.html
+++ b/templates/frontpages/index.html
@@ -8,7 +8,7 @@
     <div class="header-one">
         <div class="shop-now text-center">
             <h2 class="fw-bold">
-                Shopify <svg xmlns="http://www.w3.org/2000/svg" width="23" height="23" fill="currentColor" class="bi bi-cart-fill"
+                Shopyfy <svg xmlns="http://www.w3.org/2000/svg" width="23" height="23" fill="currentColor" class="bi bi-cart-fill"
                 viewBox="0 0 16 16">
                 <path
                     d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z" />
@@ -65,24 +65,22 @@
             </div>
 
             <div>
-                <a href="{% url 'index' %}" class="btn btn-md bg-warning px-3 py-2 my-3 text-light">Clear Filters</a>
+                <a href="{% url 'index' %}" class="btn btn-md bg-warning px-3 py-2 mt-2 text-light">Clear Filters</a>
             </div>
         </div>
 
-
-
-        <div class="row my-4 col-xl-9 col-md-9 col-sm-12">
-            <!-- <h4>{{request.user.username|upper}}'s Item in Stock</h4> -->
+        <div class="row col-xl-9 col-md-9 col-sm-12">
+<!--             <h4>{{request.user.username|upper}}'s Item in Stock</h4>-->
             {%if query %}
             <h3>Items under searched word <span class="text-danger">{{query}}<span></h3>
             {% for obj in object_list %}
             <div class="col-xl-3 col-md-4 col-sm-12 my-3 product-cards">
-                <div class="card my-3">
+                <div class="card mt-0 pt-0">
                     <div class="card-image">
                         <img src="{{obj.image.url}}" class="card-img-top" alt="Item image">
                     </div>
                     <div class="card-text">
-                        <a href="?item={{obj.name}}">{{obj.name}}</h4></a>
+                        <a href="{% url 'item-detail' obj.id %}">{{obj.name}}</h4></a>
                     </div>
                 </div>
             </div>
